--- a/images/pangeonotebook-2021.05.04_prefect-0.14.7_pangeoforgerecipes-0.3.3/requirements.txt
+++ b/images/pangeonotebook-2021.05.04_prefect-0.14.7_pangeoforgerecipes-0.3.3/requirements.txt
@@ -1,4 +1,3 @@
 pangeo-forge-recipes==0.3.3
 prefect[aws, azure, google, kubernetes]==0.14.7
-dask-cloudprovider==2021.3.1
-# prefect[aws, azure, dask_cloudprovider, google, kubernetes]==0.14.7
+dask-cloudprovider[aws]==2021.3.1
