--- a/images/pangeonotebook-2021.05.15_prefect-0.14.19_pangeoforgerecipes-0.3.4/requirements.txt
+++ b/images/pangeonotebook-2021.05.15_prefect-0.14.19_pangeoforgerecipes-0.3.4/requirements.txt
@@ -1,3 +1,9 @@
 pangeo-forge-recipes==0.3.4
 prefect[aws, azure, google, kubernetes]==0.14.19
 dask-cloudprovider[aws]==2021.3.1
+click==7.1.2
+pytest==6.2.4
+regionmask==0.6.2
+Cython==0.29.23
+python-dateutil==2.7.5
+fsspec==2021.05.0
