--- a/images/pangeonotebook-2021.06.05_prefect-0.14.22_pangeoforgerecipes-0.4.0/requirements.txt
+++ b/images/pangeonotebook-2021.06.05_prefect-0.14.22_pangeoforgerecipes-0.4.0/requirements.txt
@@ -1,9 +1,3 @@
 pangeo-forge-recipes==0.4.0
+prefect[aws, azure, google, kubernetes]==0.14.22
 dask-cloudprovider[aws]==2021.3.1
-prefect==0.14.22
-click==7.1.2
-pytest==6.2.4
-regionmask==0.6.2
-Cython==0.29.23
-python-dateutil==2.7.5
-fsspec==2021.05.0
