--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,8 @@ jobs:
           "pangeonotebook-2021.05.15_prefect-0.14.19_pangeoforgerecipes-0.3.4",
           "pangeonotebook-2021.06.05_prefect-0.14.22_pangeoforgerecipes-0.4.0",
           "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.5.0",
-          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor"
-          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.0",
+          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor",
+          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.0"
         ]
     steps:
       - uses: actions/checkout@v2
