--- a/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor/Dockerfile
+++ b/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor/Dockerfile
@@ -5,4 +5,5 @@ COPY ./requirements.txt requirements.txt
 RUN conda run -n notebook pip uninstall -y -r requirements.txt
 
 RUN conda run -n notebook pip install -I -r requirements.txt
-RUN conda run -n notebook pip install git+https://github.com/pangeo-forge/pangeo-forge-recipes@e706a663a74e315217168acb5ec5a62bfc098f4a
+
+RUN conda run -n notebook pip install git+https://github.com/pangeo-forge/pangeo-forge-recipes.git@refs/pull/219
