--- a/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.1/requirements.txt
+++ b/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.1/requirements.txt
@@ -1,3 +1,3 @@
 pangeo-forge-recipes==0.6.1
 prefect[aws, azure, google, kubernetes]==0.14.22
-ask-cloudprovider[aws]==2021.3.1
+dask-cloudprovider[aws]==2021.3.1
