--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,8 @@ jobs:
           "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.5.0",
           "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor",
           "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.0",
-          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.1"
+          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.1",
+          "pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-229"
         ]
     steps:
       - uses: actions/checkout@v2
