--- a/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.5.0/requirements.txt
+++ b/images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.5.0/requirements.txt
@@ -1,3 +1,6 @@
 pangeo-forge-recipes==0.5.0
 prefect[aws, azure, google, kubernetes]==0.14.22
 dask-cloudprovider[aws]==2021.3.1
+fsspec==2021.11.0
+gcsfs==2021.11.0
+s3fs==2021.11.0
