install 0.8.3 from pip

--- a/images/pangeonotebook-2021.12.02_prefect-0.14.22_pangeoforgerecipes-0.8.3/Dockerfile
+++ b/images/pangeonotebook-2021.12.02_prefect-0.14.22_pangeoforgerecipes-0.8.3/Dockerfile
@@ -1,5 +1,5 @@
 FROM pangeo/pangeo-notebook:2021.12.02
 
-RUN mamba install -n notebook -c conda-forge -y pangeo-forge-recipes==0.8.3
+RUN mamba run -n notebook pip install pangeo-forge-recipes==0.8.3
 
 RUN mamba install -n notebook -c conda-forge -y "prefect[aws, google, kubernetes]==0.14.22"
